samples/_failures_safe/1761699844_5f62eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f8e1e87.c: In function ‘main’:
./samples/SAFE/__tmp_0f8e1e87.c:164:5: error: expected ‘,’ or ‘;’ at end of input
  164 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_0f8e1e87.c:164:5: error: expected declaration or statement at end of input
